force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2__c/OrgChartPlus__MSO_OrgChart2__c.object-meta.xml
<CustomObject>
    <label>MSO OrgChart</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSO OrgCharts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>