force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2__c/fields/OrgChartPlus__ImportFilter__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ImportFilter__c</fullName>
    <label>Import Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>