force-app/main/default/objects/OrgChartPlus__MSO_OrgChart2__c/fields/OrgChartPlus__PlaceHolders__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__PlaceHolders__c</fullName>
    <label>Place Holders</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>